--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-django
+Django==2.2.5
+django-seed==0.3.1
+Faker==13.11.1
+lists==1.3.0
+Pillow==9.1.1
+python-dateutil==2.8.2
+pytz==2022.1
+six==1.16.0
+sqlparse==0.4.2
+toposort==1.7
