--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,17 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-Django = "==2.2.5"
-django-seed = "*"
-lists = "*"
-pillow = "*"
+django-seed = "==0.3.1"
+lists = "==1.3.0"
+python-dateutil = "==2.8.2"
+pytz = "==2022.1"
+six = "==1.16.0"
+sqlparse = "==0.4.2"
+toposort = "==1.7"
+Pillow = "==9.1.1"
+Faker = "==13.11.1"
+django = "*"
+gunicorn = "*"
 
 [dev-packages]
 
