--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
-Django==2.2.5
+-i https://pypi.org/simple
+asgiref==3.8.1; python_version >= '3.8'
+django==4.2.20; python_version >= '3.8'
 django-seed==0.3.1
-Faker==13.11.1
+faker==13.11.1; python_version >= '3.6'
+gunicorn==23.0.0; python_version >= '3.7'
 lists==1.3.0
-Pillow==9.1.1
-python-dateutil==2.8.2
+packaging==25.0; python_version >= '3.8'
+pillow==9.1.1; python_version >= '3.7'
+python-dateutil==2.8.2; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pytz==2022.1
-six==1.16.0
-sqlparse==0.4.2
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+sqlparse==0.4.2; python_version >= '3.5'
 toposort==1.7
+typing-extensions==4.13.2; python_version < '3.11'
