--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3
 sqlparse==0.4.2; python_version >= '3.5'
 toposort==1.7
 typing-extensions==4.13.2; python_version < '3.11'
+django-environ==0.9.0
